--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 font-size: 14px;
             }
             .content-top h2{
-                background: #FF8901;
+                background: #3c8dbc;
                 color: #fff;
                 font-size: 20px;
                 padding: 10px 0;
@@ -40,7 +40,7 @@
             }
             .content-top a{
                 display: block;
-                color: #FF8901;
+                color: #3c8dbc;
                 font-style: normal;
                 display: block;
                 margin: 2px 0;
