--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>index</title>
+        <title>Baacloud官网</title>
         <style>
             html,
             body {
