--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 border-bottom: 1px solid #E2E0DE
             }
             .main h1{
-                color: #FF8901;
+                color: #3c8dbc;
                 font-weight: normal;
                 padding: 40px 0;
             }
