--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             }
             .main{
                 text-align: center;
+                width: 80%; 
             }
             .content{
                 background: #fff;
