--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -12,6 +11,7 @@
                 margin: 0;
                 background: #272727;
                 font: 400 16px/1.7 "Microsoft JhengHei", sans-serif;
+				font: normal 150% Helvetica;
             }
             div,ul,li,h1,p,h2{
                 padding: 0;
@@ -22,20 +22,21 @@
             }
             .main{
                 text-align: center;
-                width: 80%; 
+				
             }
             .content{
                 background: #fff;
                 padding: 20px;
                 display: inline-block;
+				width: 90%; 
             }
             .content-top{
-                font-size: 14px;
+                font-size: 1.2em
             }
             .content-top h2{
                 background: #3c8dbc;
                 color: #fff;
-                font-size: 20px;
+                font-size: 2em;
                 padding: 10px 0;
                 font-weight: normal;
             }
