--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 margin: 0;
                 background: #272727;
                 font: 400 16px/1.7 "Microsoft JhengHei", sans-serif;
-				font: normal 150% Helvetica;
+				font: normal 100% Helvetica;
             }
             div,ul,li,h1,p,h2{
                 padding: 0;
@@ -67,14 +67,11 @@
                     <h2>请大家 Ctrl+D 收藏本页</h2>
                     <ul>
                         <li>
-                            Baacloud最新地址
+                            Baacloud最新地址:
                             <a href="https://adf.ly/ernoq" target="_blank">https://adf.ly/ernoq/</a>
                         </li>
-		
                     </ul>
-                    <p>无法打开请多刷新几遍，或者打开备用地址<br>
-                        无法打开请多刷新几遍，或者打开备用地址<br>
-                        无法打开请多刷新几遍，或者打开备用地址</p>
+                    <p><br>无法打开请多刷新几遍，或者打开备用地址<br>无法打开请多刷新几遍，或者打开备用地址<br>无法打开请多刷新几遍，或者打开备用地址</p>
                 </div>
             </div>
         </div>
