--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 background: #fff;
                 padding: 20px;
                 display: inline-block;
-				width: 90%; 
+				width: 90%;
+				margin-top:120px;
             }
             .content-top{
                 font-size: 1.2em
