--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Baacloud官网</title>
+	<meta name="keywords" content="baacloud,baacloud官网,baacloud下载" />
         <style>
             html,
             body {
@@ -19,6 +20,7 @@
             }
             ul,li{
                 list-style: none;
+				font-size: 1.8em;
             }
             .main{
                 text-align: center;
@@ -72,7 +74,7 @@
                             <a href="https://adf.ly/ernoq" target="_blank">https://adf.ly/ernoq/</a>
                         </li>
                     </ul>
-                    <p><br>无法打开请多刷新几遍，或者打开备用地址<br>无法打开请多刷新几遍，或者打开备用地址<br>无法打开请多刷新几遍，或者打开备用地址</p>
+                    <p><br />无法打开请多刷新几遍，或者打开备用地址<br /><br />无法打开请多刷新几遍，或者打开备用地址<br /><br />无法打开请多刷新几遍，或者打开备用地址<br /></p>
                 </div>
             </div>
         </div>
